Show stop times in timetable viewer in online mode