@@ -11,7 +11,6 @@ import org.mockito.Mockito;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.time.DayOfWeek;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.Arrays;
@@ -50,52 +49,52 @@ public class StopTimeServiceTest {
                 createStopTime(LocalTime.of(0,21), LocalTime.of(0,22), "108", 8)
                 ));
         //Test case 1: 3 Departures in the next 2 hours before 22:00
-        List<StopTime> stopTimeTestList1 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "16:00");
+        List<StopTime> stopTimeTestList1 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "16:00", "");
         assertEquals(3, stopTimeTestList1.size());
         assertEquals(1, stopTimeTestList1.get(0).getId());
         assertEquals(2, stopTimeTestList1.get(1).getId());
         assertEquals(3, stopTimeTestList1.get(2).getId());
         //Test case 2: 1 Departure before 22:00 and 1 after
-        List<StopTime> stopTimeTestList2 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "21:00");
+        List<StopTime> stopTimeTestList2 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "21:00", "");
         assertEquals(2, stopTimeTestList2.size());
         assertEquals(5, stopTimeTestList2.get(0).getId());
         assertEquals(6, stopTimeTestList2.get(1).getId());
         //Test case 3: 2 Departures before 22:00 and 0 after
-        List<StopTime> stopTimeTestList3 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "20:05");
+        List<StopTime> stopTimeTestList3 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "20:05", "");
         assertEquals(2, stopTimeTestList3.size());
         assertEquals(4, stopTimeTestList3.get(0).getId());
         assertEquals(5, stopTimeTestList3.get(1).getId());
         //Test caae 4: 2 Departures between 23:00 and 01:00 on separate days.
-        List<StopTime> stopTimeTestList4 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH","23:00");
+        List<StopTime> stopTimeTestList4 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH","23:00", "");
         assertEquals(2, stopTimeTestList4.size());
         assertEquals(7, stopTimeTestList4.get(0).getId());
         assertEquals(8, stopTimeTestList4.get(1).getId());
         //Test case 5: 3 Arrivals before 22:00
-        List<StopTime> stopTimeTestArrivalList1 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "16:00");
+        List<StopTime> stopTimeTestArrivalList1 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "16:00", "");
         assertEquals(3, stopTimeTestArrivalList1.size());
         assertEquals(1, stopTimeTestArrivalList1.get(0).getId());
         assertEquals(2, stopTimeTestArrivalList1.get(1).getId());
         assertEquals(3, stopTimeTestArrivalList1.get(2).getId());
         //Test case 6: 1 Arrivals before 22:00 and 1 after
-        List<StopTime> stopTimeTestArrivalList2 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "21:00");
+        List<StopTime> stopTimeTestArrivalList2 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "21:00", "");
         assertEquals(2, stopTimeTestArrivalList2.size());
         assertEquals(5, stopTimeTestArrivalList2.get(0).getId());
         assertEquals(6, stopTimeTestArrivalList2.get(1).getId());
         //Test case 7: 2 Arrivals before 22:00 and 0 after
-        List<StopTime> stopTimeTestArrivalList3 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "20:05");
+        List<StopTime> stopTimeTestArrivalList3 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "20:05", "");
         assertEquals(2, stopTimeTestArrivalList3.size());
         assertEquals(4, stopTimeTestArrivalList3.get(0).getId());
         assertEquals(5, stopTimeTestArrivalList3.get(1).getId());
         //Test caae 8: 2 Arrivals between 23:00 and 01:00 on separate days.
-        List<StopTime> stopTimeTestArrivalList4 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "23:00");
+        List<StopTime> stopTimeTestArrivalList4 = stopTimeService.getArrivals("Lakeside", "Mustermann Bus GmbH", "23:00", "");
         assertEquals(2, stopTimeTestArrivalList4.size());
         assertEquals(7, stopTimeTestArrivalList4.get(0).getId());
         assertEquals(8, stopTimeTestArrivalList4.get(1).getId());
         //Test case: test all departures for this date.
-        List<StopTime> stopTimeDepartureDateList = stopTimeService.getDeparturesByDate("Lakeside", "Mustermann Bus GmbH", "10-04-2021 00:00");
+        List<StopTime> stopTimeDepartureDateList = stopTimeService.getDeparturesByDate("Lakeside", "Mustermann Bus GmbH", "10-04-2021 00:00", "");
         assertEquals(8, stopTimeDepartureDateList.size());
-        assertEquals(8, stopTimeDepartureDateList.get(0).getId());
-        assertEquals(7, stopTimeDepartureDateList.get(stopTimeDepartureDateList.size()-1).getId());
+        assertEquals(8, stopTimeDepartureDateList.getFirst().getId());
+        assertEquals(7, stopTimeDepartureDateList.getLast().getId());
     }
 
     /**
@@ -110,7 +109,7 @@ public class StopTimeServiceTest {
                 createStopTime(LocalTime.of(23,58), LocalTime.of(23,59), "108", 3)
         ));
         //Test case 1: 3 Departures in the next 2 hours after 22:00
-        List<StopTime> stopTimeTestList1 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "22:01");
+        List<StopTime> stopTimeTestList1 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH", "22:01", "");
         assertEquals(3, stopTimeTestList1.size());
         assertEquals(1, stopTimeTestList1.get(0).getId());
         assertEquals(2, stopTimeTestList1.get(1).getId());
@@ -130,7 +129,7 @@ public class StopTimeServiceTest {
 
         ));
         //Test case 1: Duplicate departures to be removed
-        List<StopTime> stopTimeTestList1 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH","10:01");
+        List<StopTime> stopTimeTestList1 = stopTimeService.getDepartures("Lakeside", "Mustermann Bus GmbH","10:01", "");
         assertEquals(2, stopTimeTestList1.size());
         assertEquals(2, stopTimeTestList1.get(0).getId());
         assertEquals(3, stopTimeTestList1.get(1).getId());
@@ -142,9 +141,9 @@ public class StopTimeServiceTest {
     @Test
     public void testDisruptedStopTimes ( ) {
         StopTime stopTime1 = createStopTime(LocalTime.of(10,21), LocalTime.of(10,22), "111", 1);
-        stopTime1.getOperatingDays().setDisruptedOperatingDays(Lists.newArrayList(LocalDateTime.of(2021,03,12,0,0)));
-        assertTrue(stopTime1.getOperatingDays().checkIfOperatingDay(LocalDateTime.of(2021,03,01,0,0)));
-        assertFalse(stopTime1.getOperatingDays().checkIfOperatingDay(LocalDateTime.of(2021,03,12,0,0)));
+        stopTime1.getOperatingDays().setDisruptedOperatingDays(Lists.newArrayList(LocalDateTime.of(2021,3,12,0,0)));
+        assertTrue(stopTime1.getOperatingDays().checkIfOperatingDay(LocalDateTime.of(2021,3,1,0,0)));
+        assertFalse(stopTime1.getOperatingDays().checkIfOperatingDay(LocalDateTime.of(2021,3,12,0,0)));
     }
 
     /**
@@ -188,7 +187,7 @@ public class StopTimeServiceTest {
                 .journeyNumber(journeyNumber)
                 .operatingDays(OperatingDays.builder()
                         .operatingDays(Arrays.asList(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY, DayOfWeek.SATURDAY, DayOfWeek.SUNDAY))
-                        .specialOperatingDays(Arrays.asList(LocalDateTime.of(2020,12,25,0,0)))
+                        .specialOperatingDays(List.of(LocalDateTime.of(2020,12,25,0,0)))
                         .build())
                 .routeNumber("405A")
                 .stopName("Lakeside")
